--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,9 +11,10 @@ import BaseLayout from "../layouts/BaseLayout.astro";
       target="_blank"
       href="https://www.gallicagrapher.com/">Gallica Grapher</a
     >, a tool that plots word occurrences in 19th-century French newspapers. I
-    just finished migrating the app from CRA to Next.js and Typescript. I'm now
-    tidying up my server-side Gallica API wrappers for a wider audience. You can
-    track my travails in my <a href="/development_blog">engineering blog</a>.
+    developed the front end portion of the application while job searching in 2022; I
+    documented the process in this <a href="/development_blog"
+      >engineering blog</a
+    >.
     <br />
     <br />
     I like to write my APIs in <a
@@ -26,9 +27,11 @@ import BaseLayout from "../layouts/BaseLayout.astro";
     >, my user interfaces in React and Typescript. I've been using Postgres to
     persist my data, sometimes Redis for simple messaging. I have tried GraphQL
     for API data validation, but I think it's excessive for my needs. Instead,
-    I'm using a lightweight combination of Zod and Pydantic to type the edges.
-    I tested tRPC, but discovered I didn't need any state on my Next.js server for my Gallica app; I now fetch client-side instead. Tailwind is my css framework of choice. For static projects,
-    such as this website, Astro.js has become my favorite tool.
+    I'm using a lightweight combination of Zod and Pydantic to type the edges. I
+    tested tRPC, but discovered I didn't need any state on my Next.js server for
+    my Gallica app; I now fetch client-side instead. Tailwind is my css
+    framework of choice. For static projects, such as this website, Astro.js has
+    become my favorite tool.
     <br />
     <br />
   </article>
