--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,36 +1,21 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
+import TabLink from "../components/TabLink.astro";
 ---
 
 <BaseLayout pageTitle="Will Gleason">
   <article
     class="prose prose-lg m-auto p-4 text-justify lg:prose-lg xl:prose-2xl"
   >
-    I'm a developer, 2021 Carleton College graduate, and French history major. I code in the hopes of making public data more accesible. I currently work in Lyon, France as a frontend developer. On the side, I maintain the <a
-      target="_blank"
-      href="https://www.gallicagrapher.com/">Gallica Grapher</a
-    >, a tool that plots word occurrences in 19th-century French newspapers. I
-    developed the application while job searching in 2022; I
-    documented the process in this <a href="/development_blog"
-      >engineering blog</a
-    >.
+    I'm a developer, 2021 Carleton College graduate, and French history major. I code in the hopes of making public data more accesible. I currently work in Lyon, France as a frontend developer. On the side, I maintain the 
+    <TabLink url="https://www.gallicagrapher.com/">Gallica Grapher</TabLink>, a tool that plots word occurrences in 19th-century French newspapers.
+    I also maintain a <TabLink url="https://nl-joke-val.vercel.app/">Twitch chat dashboard</TabLink> for Northernlion's chat. A Go server
+    counts emotes, +2s, and -2s, creating a live feed of the stream.
     <br />
     <br />
-    I like to write my APIs in <a
-      target="_blank"
-      href="https://github.com/gleasonw/gallica-grapher/blob/main/backend/main.py"
-      >Python</a
-    > or <a
-      target="_blank"
-      href="https://github.com/gleasonw/bppb/blob/main/api/api.go">Go</a
-    >, my user interfaces in React and Typescript. I've been using Postgres to
-    persist my data, sometimes Redis for simple messaging. I have tried GraphQL
-    for API data validation, but I think it's excessive for my needs. Instead,
-    I'm using Zod and Pydantic to type the edges. I
-    tested tRPC, but discovered I didn't need any state on my Next.js server for
-    my Gallica app; I now fetch client-side instead. Tailwind is my css
-    framework of choice. For static projects, such as this website, Astro.js has
-    become my favorite tool.
+    I like to write my APIs in <TabLink url="https://github.com/gleasonw/gallica-grapher/blob/main/backend/main.py">Python</TabLink>
+    or <TabLink url="https://github.com/gleasonw/nl_joke_val/blob/main/api/api.go">Go</TabLink>, my user interfaces in Typescript, using React or Vue. Most of all,
+    I like making complex data enjoyable to explore.
     <br />
     <br />
   </article>
