--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import TabLink from "../components/TabLink.astro";
     <br />
     I like to write my APIs in <TabLink url="https://github.com/gleasonw/gallica-grapher/blob/main/backend/main.py">Python</TabLink>
     or <TabLink url="https://github.com/gleasonw/nl_joke_val/blob/main/api/api.go">Go</TabLink>, my user interfaces in Typescript, using React or Vue. Most of all,
-    I like making complex data enjoyable to explore.
+    I enjoy projects that bring delight, simplifying access to complex data.
     <br />
     <br />
   </article>
