--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import TabLink from "../components/TabLink.astro";
     class="prose prose-lg m-auto p-4 text-justify lg:prose-lg xl:prose-2xl"
   >
     <p>
-      I'm a developer, 2021 Carleton College graduate, and French history major. I code in the hopes of making public data more accesible. I currently work in Lyon, France as a frontend developer. On the side, I maintain the 
+      I'm a developer, 2021 Carleton College graduate, and French history major. I code in the hopes of making public data more accessible. I currently work in Lyon, France as a frontend developer. On the side, I maintain the 
       <TabLink url="https://www.gallicagrapher.com/">Gallica Grapher</TabLink>, a tool that plots word occurrences in 19th-century French newspapers.
       I also maintain a <TabLink url="https://nl-joke-val.vercel.app/">Twitch chat dashboard</TabLink> for Northernlion's chat. A Go server
       counts emotes, +2s, and -2s, creating a live feed of the stream.
