--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,8 +15,7 @@ import TabLink from "../components/TabLink.astro";
     </p>
     <p>
       I like to write my APIs in <TabLink url="https://github.com/gleasonw/gallica-grapher/blob/main/backend/main.py">Python</TabLink>
-      or <TabLink url="https://github.com/gleasonw/nl_joke_val/blob/main/api/api.go">Go</TabLink>, my user interfaces in Typescript, using React or Vue. Most of all,
-      I enjoy projects that bring delight, especially exploring complex data.
+      or <TabLink url="https://github.com/gleasonw/nl_joke_val/blob/main/api/api.go">Go</TabLink>, my user interfaces in Typescript, using React or Vue.
     </p>
   </article>
 </BaseLayout>
