--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,7 @@
 ---
 import Navigation from "../components/Navigation.astro";
 import Footer from "../components/Footer.astro";
+import { ViewTransitions } from "astro:transitions";
 
 const { pageTitle } = Astro.props;
 ---
@@ -13,6 +14,7 @@ const { pageTitle } = Astro.props;
   <meta name="viewport" content="width=device-width" />
   <meta name="generator" content={Astro.generator} />
   <title>{pageTitle}</title>
+  <ViewTransitions />
 
   <body>
     <Navigation />
