move svgs to src

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 ---
 import Social from "./Social.astro";
-import github from '/github.svg';
-import linkedin from '/linkedin.svg';
+import github from '../images/github.svg';
+import linkedin from '../images/linkedin.svg'
 ---
 
 <footer>
