--- a/src/components/ImageFrame.astro
+++ b/src/components/ImageFrame.astro
@@ -1,7 +1,8 @@
 ---
 const { src, alt } = Astro.props
+import { Image } from "astro:assets";
 ---
 
 <div class='border p-10'>
-    <img src={src} alt={alt} />
+    <Image src={src} alt={alt} />
 </div>
