--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -1,7 +1,8 @@
 ---
 const { platform, username, svg } = Astro.props;
+import { Image } from "astro:assets";
 ---
 
 <a href={`https://${platform}.com/${username}`}>
-    <img src={svg} alt={platform} class='w-10'/>
+    <Image src={svg} alt={platform} class='w-10'/>
 </a>
