--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,10 +1,10 @@
 ---
 ---
 
-<div class='flex flex-col md:flex-row lg:flex-row justify-between gap-5 p-10 flex-wrap text-xl'>
-  <a class='border-4 border-red- hover:bg-zinc-400 transition duration-150 hover:ease-in p-3' href="/">Will</a>
-  <a class='border-4 hover:bg-zinc-400 transition duration-150 hover:ease-in p-3' href="/lyon_blog">Lyon</a>
-  <a class='border-4 hover:bg-zinc-400 transition duration-150 hover:ease-in p-3' href="/development_blog">Seattle</a>
-  <a class='border-4 hover:bg-zinc-400 transition duration-150 hover:ease-in p-3' href="/bressuire_blog/">Bressuire</a>
-  <a class='border-4 hover:bg-zinc-400 transition duration-150 hover:ease-in p-3' href="/poitiers_blog/">Poitiers</a>
+<div class='flex flex-col md:flex-row lg:flex-row justify-between gap-5 p-10 flex-wrap text-xl font-serif'>
+  <a class='border-4 border-red- hover:bg-zinc-400 transition duration-150 hover:ease-in p-3 shadow-md' href="/">Will</a>
+  <a class='border-4 hover:bg-zinc-400 transition duration-150 hover:ease-in p-3 shadow-md' href="/lyon_blog">Lyon</a>
+  <a class='border-4 hover:bg-zinc-400 transition duration-150 hover:ease-in p-3 shadow-md' href="/development_blog">Seattle</a>
+  <a class='border-4 hover:bg-zinc-400 transition duration-150 hover:ease-in p-3 shadow-md' href="/bressuire_blog/">Bressuire</a>
+  <a class='border-4 hover:bg-zinc-400 transition duration-150 hover:ease-in p-3 shadow-md' href="/poitiers_blog/">Poitiers</a>
 </div>
