--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import TabLink from "../components/TabLink.astro";
 
 <BaseLayout pageTitle="Will Gleason">
   <article
-    class="prose prose-lg m-auto p-4 text-justify lg:prose-lg xl:prose-2xl"
+    class="prose prose-xl m-auto p-4 text-justify lg:prose-2xl"
   >
     <p>
       I'm a developer, 2021 Carleton College graduate, and French history major. I code in the hopes of making public data more accessible. I currently work in Lyon, France as a frontend developer. On the side, I maintain the 
