--- a/src/components/PostNavigator.astro
+++ b/src/components/PostNavigator.astro
@@ -10,7 +10,7 @@ const { posts } = Astro.props;
 <div class='mt-20 flex flex-col gap-10'>
   {
     posts.slice(0).reverse().map((post) => (
-      <uL class="border m-2">
+      <uL class="shadow border border-green-100 hover:bg-gray-100 transition-all m-2">
         <li>
           <a class="flex flex-col p-5" href={post.url}>
             {" "}
