--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,14 +8,14 @@ import TabLink from "../components/TabLink.astro";
     class="prose prose-xl m-auto p-4 text-justify lg:prose-2xl"
   >
     <p>
-      I'm a developer, 2021 Carleton College graduate, and French history major. I code in the hopes of making public data more accessible. I currently work in Lyon, France as a frontend developer. On the side, I maintain the 
+      I'm a developer, 2021 Carleton College graduate, and French history major. I currently work in Lyon, France as a web developer. On the side, I maintain the 
       <TabLink url="https://www.gallicagrapher.com/">Gallica Grapher</TabLink>, a tool that plots word occurrences in 19th-century French newspapers.
       I also maintain a <TabLink url="https://nl-joke-val.vercel.app/">Twitch chat dashboard</TabLink> for Northernlion's chat. A Go server
-      counts emotes, +2s, and -2s, creating a live feed of the stream.
+      counts emotes, +2s, and -2s, creating a live feed of the stream. I recently started <TabLink url="https://lidnd.com/">LiDnD</TabLink>, an encounter management tool for DnD. 
     </p>
     <p>
       I like to write my APIs in <TabLink url="https://github.com/gleasonw/gallica-getter/blob/main/main.py">Python</TabLink>
-      or <TabLink url="https://github.com/gleasonw/nl_joke_val/blob/main/api/api.go">Go</TabLink>, my user interfaces in Typescript, using React or Vue.
+      or <TabLink url="https://github.com/gleasonw/nl_joke_val/blob/main/emote_tracking/emote_counter.go">Go</TabLink>, my user interfaces in Typescript, using React or Vue.
     </p>
   </article>
 </BaseLayout>
