--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,10 +8,20 @@ import TabLink from "../components/TabLink.astro";
     class="prose prose-xl m-auto p-4 text-justify lg:prose-2xl"
   >
     <p>
-      I'm a developer, 2021 Carleton College graduate, and French history major. I currently work in Lyon, France as a web developer. On the side, I maintain the 
-      <TabLink url="https://www.gallicagrapher.com/">Gallica Grapher</TabLink>, a tool that plots word occurrences in 19th-century French newspapers.
-      I also maintain a <TabLink url="https://nl-joke-val.vercel.app/">Twitch chat dashboard</TabLink> for Northernlion's chat. A Go server
-      counts emotes, +2s, and -2s, creating a live feed of the stream. I recently started <TabLink url="https://lidnd.com/">LiDnD</TabLink>, an encounter management tool for DnD. 
+      I'm a developer, 2021 Carleton College graduate, and French history major. I currently work in Lyon, France as a web developer. You will find on this blog a collection of my thoughts, as is right. On the side, I maintain:
+      <ol>
+        <li>
+          the <TabLink url="https://www.gallicagrapher.com/">Gallica Grapher</TabLink>, a tool that plots word occurrences in 19th-century French newspapers.
+        </li>
+        <li>
+          a <TabLink url="https://nl-joke-val.vercel.app/">Twitch chat dashboard</TabLink> for Northernlion's chat. A Go server
+          counts emotes, +2s, and -2s, creating a live feed of the stream. 
+        </li>
+        <li>
+          <TabLink url="https://lidnd.com/">LiDnD</TabLink>, an encounter management tool for DnD. 
+        </li>
+        
+      </ol> 
     </p>
     <p>
       I like to write my APIs in <TabLink url="https://github.com/gleasonw/gallica-getter/blob/main/main.py">Python</TabLink>
