--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import TabLink from "../components/TabLink.astro";
     class="prose prose-xl m-auto p-4 text-justify lg:prose-2xl"
   >
     <p>
-      I'm a developer, 2021 Carleton College graduate, and French history major. I currently work in Seattle as a web application developer. You will find on this blog a collection of my thoughts, as is right. On the side, I maintain:
+      I work in Seattle as a web application developer. On the side, I maintain:
       <ol>
         <li>
           the <TabLink url="https://www.gallicagrapher.com/">Gallica Grapher</TabLink>, a tool that plots word occurrences in 19th-century French newspapers.
